Change "You have successfully logged in." translate from "Вы успешно авторизовались." to "Вы залогинены."

--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -166,7 +166,7 @@ msgstr "Пользователь успешно удален"
 
 #: task_manager/views.py:23
 msgid "You have successfully logged in."
-msgstr "Вы успешно авторизовались."
+msgstr "Вы залогинены."
 
 #: task_manager/views.py:31
 msgid "You've logged out of your account."
